--- a/Berry.SEOKit.csproj
+++ b/Berry.SEOKit.csproj
@@ -71,6 +71,7 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\title-meta-settings.png" />
     <Content Include="Web.config" />
     <Content Include="Scripts\Web.config" />
     <Content Include="Styles\Web.config" />
@@ -92,16 +93,24 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\RobotsController.cs" />
     <Compile Include="Drivers\TitleAndMetaDriver.cs" />
+    <Compile Include="Handlers\RobotConfigSettingsPartHandler.cs" />
     <Compile Include="Migrations\TitleAndMetaMigrations.cs" />
+    <Compile Include="Models\RobotConfigSettingsPart.cs" />
     <Compile Include="Models\TitleAndMetaPart.cs" />
+    <Compile Include="Routes\RobotsRoutes.cs" />
+    <Compile Include="Services\IRobotConfigService.cs" />
     <Compile Include="Services\IPageTitleService.cs" />
     <Compile Include="Services\PageTitleService.cs" />
+    <Compile Include="Services\RobotConfigService.cs" />
     <Compile Include="Settings\TitleAndMetaSettingsHooks.cs" />
     <Compile Include="Settings\TitleAndMetaPartSettings.cs" />
     <Compile Include="ShapeProviders\LayoutShapeProvider.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Content Include="README.md" />
+  </ItemGroup>
   <ItemGroup>
     <Content Include="Placement.info" />
   </ItemGroup>
@@ -113,6 +122,13 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\DefinitionTemplates\TitleAndMetaPartSettings.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\EditorTemplates\Parts\RobotConfigSettings.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Views\Parts\" />
+    <Folder Include="Views\Robots\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
