Rewrite rules, cleanup

--- a/Berry.SEOKit.csproj
+++ b/Berry.SEOKit.csproj
@@ -95,14 +95,20 @@
   <ItemGroup>
     <Compile Include="Controllers\RobotsController.cs" />
     <Compile Include="Drivers\TitleAndMetaDriver.cs" />
+    <Compile Include="Filters\RedirectFilter.cs" />
+    <Compile Include="Handlers\RedirectConfigSettingsPartHandler.cs" />
     <Compile Include="Handlers\RobotConfigSettingsPartHandler.cs" />
     <Compile Include="Migrations\TitleAndMetaMigrations.cs" />
+    <Compile Include="Models\RedirectConfigSettingsPart.cs" />
+    <Compile Include="Models\RedirectRule.cs" />
     <Compile Include="Models\RobotConfigSettingsPart.cs" />
     <Compile Include="Models\TitleAndMetaPart.cs" />
     <Compile Include="Routes\RobotsRoutes.cs" />
+    <Compile Include="Services\IRedirectConfigService.cs" />
     <Compile Include="Services\IRobotConfigService.cs" />
     <Compile Include="Services\IPageTitleService.cs" />
     <Compile Include="Services\PageTitleService.cs" />
+    <Compile Include="Services\RedirectConfigService.cs" />
     <Compile Include="Services\RobotConfigService.cs" />
     <Compile Include="Settings\TitleAndMetaSettingsHooks.cs" />
     <Compile Include="Settings\TitleAndMetaPartSettings.cs" />
@@ -129,6 +135,9 @@
   <ItemGroup>
     <Folder Include="Views\Parts\" />
     <Folder Include="Views\Robots\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\EditorTemplates\Parts\RedirectConfigSettings.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
