Title & meta tokens, redirect wildcard handling

--- a/Berry.SEOKit.csproj
+++ b/Berry.SEOKit.csproj
@@ -118,6 +118,7 @@
     <Compile Include="Settings\TitleAndMetaSettingsHooks.cs" />
     <Compile Include="Settings\TitleAndMetaPartSettings.cs" />
     <Compile Include="ShapeProviders\LayoutShapeProvider.cs" />
+    <Compile Include="Tokens\TitleAndMetaTokens.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="README.md" />
